--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ body {
                     
                     <div class="d-flex gap-3 mb-4">
                         <div class="text-center">
-                            <div class="fs-1 fw-bold">50+</div>
+                            <div class="fs-1 fw-bold">7000+</div>
                             <div class="text-muted">Courses</div>
                         </div>
                         <div class="text-center">
@@ -195,7 +195,7 @@ body {
                             <a style="color:white;" href="https://www.anezom.online/">Access and Download Courses for free</a> <i class="fas fa-arrow-right ms-2"></i>
                         </button>
                         <button class="btn btn-outline-light btn-lg" data-bs-toggle="modal" data-bs-target="#freePreviewModal">
-                            <a  href="https://www.anezom.online/">Free Download</a> <i class="fas fa-eye ms-2"></i>
+                            <a  href="https://ko-fi.com/s/d75563ce57">If you want to Support us with buying the pack for $2.99</a> <i class="fas fa-eye ms-2"></i>
                         </button>
                     </div>
                 </div>
