--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ body {
                             <div class="text-muted">Courses</div>
                         </div>
                         <div class="text-center">
-                            <div class="fs-1 fw-bold">500+</div>
+                            <div class="fs-1 fw-bold">35 000+</div>
                             <div class="text-muted">Hours</div>
                         </div>
                         <div class="text-center">
