--- a/index.html
+++ b/index.html
@@ -210,11 +210,24 @@ body {
                             <div class="carousel-item active">
                                 <img src="https://i.postimg.cc/Dw6fSfLy/Chat-GPT-Image-Apr-26-2025-06-56-28-PM.png" alt="Premium Course Pack 1" class="img-fluid rounded shadow">
                             </div>
+                            
                             <div class="carousel-item">
-                                <img src="https://i.postimg.cc/VNFr2bJQ/155c3cd9-8b2f-4c6b-b5cf-7f46653fc562-screenshot2025-03-07220722.png" alt="Premium Course Pack 1" class="img-fluid rounded shadow">
+                                <img src="https://i.postimg.cc/6ppJ1r4t/Screenshot-2025-04-26-182549.png" alt="Premium Course Pack 3" class="img-fluid rounded shadow">
                             </div>
                             <div class="carousel-item">
-                                <img src="https://i.postimg.cc/yY5XzNqZ/course-image3.jpg" alt="Premium Course Pack 3" class="img-fluid rounded shadow">
+                                <img src="https://i.postimg.cc/brh40kjX/Screenshot-2025-04-26-182758.png" alt="Premium Course Pack 3" class="img-fluid rounded shadow">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://i.postimg.cc/Ls0HVyxc/Modern-Daily-Podcast-You-Tube-Thumbnail.jpg" alt="Premium Course Pack 1" class="img-fluid rounded shadow">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://i.postimg.cc/VNFr2bJQ/155c3cd9-8b2f-4c6b-b5cf-7f46653fc562-screenshot2025-03-07220722.png" alt="Premium Course Pack 3" class="img-fluid rounded shadow">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://i.postimg.cc/BZTrSYxJ/Screenshot-2025-04-26-182917.png" alt="Premium Course Pack 3" class="img-fluid rounded shadow">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://i.postimg.cc/TYPCzC07/Screenshot-2025-04-26-183702.png" alt="Premium Course Pack 3" class="img-fluid rounded shadow">
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#courseCarousel" data-bs-slide="prev">
