--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elite Skills Pack | Premium Udemy & Coursera Courses</title>
+    <title>Career Maestros | Premium Udemy & Coursera Courses</title>
     <meta name="description" content="Get lifetime access to over 7000 premium Udemy and Coursera courses for only $9.99!">
     
     <!-- Preload critical resources -->
@@ -1113,7 +1113,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <h5 class="text-white mb-4">Elite Skills Pack</h5>
+                    <h5 class="text-white mb-4">Career Maestros</h5>
                     <p class="text-white-50">Providing affordable access to premium education since 2024. Our mission is to make high-quality learning accessible to everyone.</p>
                     <div class="mt-4">
                         <a href="#" class="social-icon me-2"><i class="fab fa-facebook-f"></i></a>
@@ -1157,7 +1157,7 @@
             <hr class="my-4 bg-dark">
             <div class="row align-items-center">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    <small class="text-white-50">© 2024 Elite Skills Pack. All rights reserved.</small>
+                    <small class="text-white-50">© 2024 Career Maestros. All rights reserved.</small>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <small class="text-white-50">
