--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
     <div class="container hero-content">
         <div class="row align-items-center">
             <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade-right">
-                <h1 class="display-4 fw-bold mb-4">The <span class="text-warning">Proven</span> Method to Grow Your TikTok and Instagram</h1>
+                <h1 class="display-4 fw-bold mb-4">The <span class="text-warning">Proven</span> Method to Grow & add followers to Your TikTok and Instagram account </h1>
                 <p class="lead mb-4">Discover the exact strategy top users, creators, influencers & businesses use to gain <strong>10,000+ real followers</strong> in just 30 days.</p>
                 
                 <div class="d-flex flex-wrap gap-3 mb-4">
