--- a/index.html
+++ b/index.html
@@ -470,8 +470,7 @@
     <div class="container hero-content">
         <div class="row align-items-center">
             <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade-right">
-                <h1 class="display-4 fw-bold mb-4">The <span class="text-warning">Proven</span> Method to Grow & add followers to Your TikTok and Instagram account </h1>
-                <p class="lead mb-4">Discover the exact strategy top users, creators, influencers & businesses use to gain <strong>10,000+ real followers</strong> in just 30 days.</p>
+                <h1 class="display-4 fw-bold mb-4">The <span class="text-warning">Proven</span> Method to Grow & add followers to Your TikTok and Instagram account </h1>                <p class="lead mb-4">Discover the exact strategy top users, creators, influencers & businesses use to gain <strong>10,000+ real followers</strong> in just 30 days.</p>
                 
                 <div class="d-flex flex-wrap gap-3 mb-4">
                     <a href="#pricing" class="btn btn-danger btn-lg">Get Instant Access Now</a>
@@ -750,7 +749,7 @@
                             <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i> Content Templates</li>
                             <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i> Email Support</li>
                         </ul>
-                        <button class="btn btn-outline-primary w-100 py-2">Get Started</button>
+                        <a class="btn btn-outline-primary w-100 py-2" href="https://www.paypal.com/ncp/payment/K42WC3KBUQHXQ">Get Started</a>
                     </div>
                 </div>
             </div>
@@ -779,7 +778,8 @@
                             <li style="color: #fbfbfb;" class=""> ddd</li>
 
                         </ul>
-                        <button class="btn btn-primary w-100 py-3">Get Started <i class="fas fa-arrow-right ms-3"></i></button>
+                        
+                        <a class="btn btn-primary w-100 py-3" href="https://www.paypal.com/ncp/payment/RN3EV3GSLTFH8">Get Started <i class="fas fa-arrow-right ms-3"></i></a>
                     </div>
                 </div>
             </div>
@@ -809,7 +809,7 @@
                             <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i> Reels Hacks & Sources</li>
                             <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i> Monthly Updates</li>
                         </ul>
-                        <button class="btn btn-dark w-100 py-2">Get VIP Access <i class="fas fa-gem ms-2"></i></button>
+                        <a class="btn btn-dark w-100 py-2" href="https://www.paypal.com/ncp/payment/BNZ3RRB7D7CLJ">Get VIP Access <i class="fas fa-gem ms-2"></i></a>
                     </div>
                 </div>
             </div>
