--- a/index.html
+++ b/index.html
@@ -499,10 +499,7 @@
                     <div class="bg-white text-dark p-3 rounded-3 shadow-sm">
                         <div class="d-flex align-items-center">
                             <i class="fas fa-chart-line fa-2x text-primary me-3"></i>
-                            <div>
-                                <div class="fw-bold">+12,483</div>
-                                <small>New Followers</small>
-                            </div>
+                            
                         </div>
                     </div>
                 </div>
@@ -748,6 +745,7 @@
                             <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i> Advanced Growth Hacks</li>
                             <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i> Content Templates</li>
                             <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i> Email Support</li>
+                            <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i>Free Gift of  200+ Udemy and Coursera Premium Courses</li>
                         </ul>
                         <a class="btn btn-outline-primary w-100 py-2" href="https://www.paypal.com/ncp/payment/K42WC3KBUQHXQ">Get Started</a>
                     </div>
@@ -808,6 +806,8 @@
                             <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i> Priority Support</li>
                             <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i> Reels Hacks & Sources</li>
                             <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i> Monthly Updates</li>
+                            <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i>Free Gift of  1000+ Udemy and Coursera Premium Courses</li>
+
                         </ul>
                         <a class="btn btn-dark w-100 py-2" href="https://www.paypal.com/ncp/payment/BNZ3RRB7D7CLJ">Get VIP Access <i class="fas fa-gem ms-2"></i></a>
                     </div>
