--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
                             <li class="pricing-feature py-2 disabled"><i class="fas fa-times-circle me-2 text-muted"></i> Email Support</li>
                             <li class="pricing-feature py-2 disabled"><i class="fas fa-times-circle me-2 text-muted"></i> Free Courses</li>
                         </ul>
-                        <a class="btn btn-success w-100 py-3" href="#">Get Free Trial</a>
+                        <a class="btn btn-success w-100 py-3" href="https://www.anezom.online/">Get Free Trial</a>
                     </div>
                 </div>
             </div>
