--- a/index.html
+++ b/index.html
@@ -811,13 +811,13 @@
                 <div class="col-md-6 mx-auto" data-aos="fade-up">
                     <div class="pricing-card h-100">
                         <div class="card-header bg-success text-white text-center py-4 position-relative">
-                            <h4 class="my-0">Prueba Gratuita</h4>
-                            <p class="text-white-50 mb-0">Prueba antes de comprar</p>
+                            <h4 class="my-0">Básico</h4>
+                            <p class="text-white-50 mb-0">Una estrategia</p>
                         </div>
                         <div class="card-body text-center py-4">
                             <div class="mb-3">
-                                <span class="h2">$0</span>
-                                <span class="text-muted">.00</span>
+                                <span class="h2">$4</span>
+                                <span class="text-muted">.99</span>
                             </div>
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li class="pricing-feature py-2"><i class="fas fa-check-circle me-2 text-success"></i> Método de Crecimiento para Instagram y TikTok</li>
@@ -826,7 +826,7 @@
                                 <li class="pricing-feature py-2 disabled"><i class="fas fa-times-circle me-2 text-muted"></i> Soporte por Correo Electrónico</li>
                                 <li class="pricing-feature py-2 disabled"><i class="fas fa-times-circle me-2 text-muted"></i> Cursos Gratuitos</li>
                             </ul>
-                            <a class="btn btn-success w-100 py-3" href="https://www.anezom.online/">Obtén la Prueba Gratuita</a>
+                            <a class="btn btn-success w-100 py-3" href="https://www.paypal.com/ncp/payment/LXZHVV3D9M2KL">acceder ahora</a>
                         </div>
                     </div>
                 </div>
