--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                 <div class="d-flex justify-content-center mb-4">
                     <div class="btn-group" role="group">
                         <button type="button" class="btn btn-outline-primary active">Planes Estándar</button>
-                        <button type="button" class="btn btn-outline-primary">Plan de Prueba Gratuita</button>
+                        <button type="button" class="btn btn-outline-primary">plan básico</button>
                     </div>
                 </div>
             </div>
