--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="video-thumbnail">
                         <div class="ratio ratio-16x9">
-                            <iframe src="https://www.youtube.com/embed/WJAFH_Ezvxk" title="Video de YouTube" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/kWoourgTzrw" title="Video de YouTube" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
