--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
                                 <span class="text-muted">.99</span>
                             </div>
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li class="pricing-feature py-2">Método de Crecimiento para Instagram y TikTok</li>
+                                <li class="pricing-feature py-2">6k to 8k followers Method for Instagram and TikTok</li>
                                 <li class="pricing-feature py-2">Llamada de Coaching 1-a-1</li>
                                 <li class="pricing-feature py-2">Estrategia de Contenido Avanzada</li>
                                 <li class="pricing-feature py-2">Trucos de Crecimiento Avanzados</li>
@@ -844,7 +844,7 @@
                                 <span class="text-muted">.99</span>
                             </div>
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li class="pricing-feature py-2">Método de Crecimiento para Instagram y TikTok</li>
+                                <li class="pricing-feature py-2">2k to 4k followers Method for Instagram and TikTok</li>
                                 <li class="pricing-feature py-2">Trucos de Crecimiento Avanzados</li>
                                 <li style="color: transparent;" class="py-2">Espaciador</li>
                                 <li style="color: transparent;" class="py-2">Espaciador</li>
@@ -899,7 +899,7 @@
                                 <span class="text-muted">.99</span>
                             </div>
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li class="pricing-feature py-2">Método de Crecimiento para Instagram y TikTok</li>
+                                <li class="pricing-feature py-2">Método de 1k seguidores para Instagram y TikTok</li>
                                 <li class="pricing-feature py-2 disabled">Trucos de Crecimiento Avanzados</li>
                                 <li class="pricing-feature py-2 disabled">Plantillas de Contenido</li>
                                 <li class="pricing-feature py-2 disabled">Soporte por Correo Electrónico</li>
