--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     <main class="main-container">
         <div class="hero">
             <h1>Enjoy up to 100% <br> more Robux</h1>
-            <p>Get more Robux on computer, web, and with gift cards</p>
+            <p>Get more Robux on computer, web, and with gift cards for $0</p>
         </div>
         
         <!-- Pricing Table -->
