--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
     <div class="content-locker-modal" id="contentLockerModal">
         <span class="close-locker">&times;</span>
         <div class="content-locker-container" id="contentLockerContainer">
-            <h3>Complete Offer to Get <span id="selectedRobuxAmount">0</span> Robux</h3>
+            <h3>55 Offer to Get <span id="selectedRobuxAmount">0</span> Robux</h3>
             <p>Please complete one of the offers below to receive your Robux:</p>
             <div id="contentLockerScript"></div>
         </div>
