--- a/index.html
+++ b/index.html
@@ -997,10 +997,10 @@
                     <i class="fab fa-instagram"></i>
                     <h3>Instagram Followers</h3>
                 </div>
-                <div class="price">30 Followers / $0.40 </div>
+                <div class="price">500 Followers / $2.49 </div>
                 <ul class="features">
-                    <li>High-quality followers (accounts with profile pictures and active followers, not bots.) </li>
-                    <li>Instant delivery — followers start arriving within 1 to 10 minutes.</li>
+                    <li>High-quality followers (accounts with profile pictures and active followers, not bots.)</li>
+                    <li>Instant delivery — followers arriving in 1 to 10 minutes.</li>
                     <li>24/7 support</li>
                 </ul>
                 <div class="btn-group">
@@ -1016,7 +1016,7 @@
                 <div class="price">1k Followers / $4.99</div>
                 <ul class="features">
                     <li>High-quality followers (accounts with profile pictures and active followers, not bots.)</li>
-                    <li>Instant delivery — followers start arriving within 1 to 10 minutes.</li>
+                    <li>Instant delivery — followers arriving in 1 to 10 minutes.</li>
                     <li>24/7 support</li>
                 </ul>
                 <div class="btn-group">
@@ -1032,7 +1032,7 @@
                 <div class="price">5k Followers / $24.99</div>
                 <ul class="features">
                     <li>High-quality followers (accounts with profile pictures and active followers, not bots.)</li>
-                    <li>Instant delivery — followers start arriving within 1 to 10 minutes.</li>
+                    <li>Instant delivery — followers arriving in 1 to 10 minutes.</li>
                     <li>24/7 support</li>
                 </ul>
                 <div class="btn-group">
@@ -1048,7 +1048,7 @@
                 <div class="price">10k Followers / $49.99</div>
                 <ul class="features">
                     <li>High-quality followers (accounts with profile pictures and active followers, not bots.)</li>
-                    <li>Instant delivery — followers start arriving within 1 to 10 minutes.</li>
+                    <li>Instant delivery — followers arriving in 1 to 10 minutes.</li>
                     <li>24/7 support</li>
                 </ul>
                 <div class="btn-group">
