--- a/index.html
+++ b/index.html
@@ -1001,7 +1001,7 @@
                 <ul class="features">
                     <li>High-quality followers (accounts with profile pictures and active followers, not bots.)</li>
                     <li>Instant delivery — followers arriving in 1 to 10 minutes.</li>
-                    <li>24/7 support</li>
+                    <li>Make your account public</li>
                 </ul>
                 <div class="btn-group">
                     <a href="https://www.paypal.com/ncp/payment/RB9JTEXTBL3J6" class="btn btn-primary">Buy Now</a>
@@ -1017,7 +1017,7 @@
                 <ul class="features">
                     <li>High-quality followers (accounts with profile pictures and active followers, not bots.)</li>
                     <li>Instant delivery — followers arriving in 1 to 10 minutes.</li>
-                    <li>24/7 support</li>
+                    <li>Make your account public</li>
                 </ul>
                 <div class="btn-group">
                     <a href="https://www.paypal.com/ncp/payment/GJ3TSPKLKPKRY" class="btn btn-primary">Buy Now</a>
@@ -1033,7 +1033,7 @@
                 <ul class="features">
                     <li>High-quality followers (accounts with profile pictures and active followers, not bots.)</li>
                     <li>Instant delivery — followers arriving in 1 to 10 minutes.</li>
-                    <li>24/7 support</li>
+                    <li>Make your account public</li>
                 </ul>
                 <div class="btn-group">
                     <a href="https://www.paypal.com/ncp/payment/KDWF6CQZVE8XS" class="btn btn-primary">Buy Now</a>
@@ -1049,7 +1049,7 @@
                 <ul class="features">
                     <li>High-quality followers (accounts with profile pictures and active followers, not bots.)</li>
                     <li>Instant delivery — followers arriving in 1 to 10 minutes.</li>
-                    <li>24/7 support</li>
+                    <li>Make your account public</li>
                 </ul>
                 <div class="btn-group">
                     <a href="https://www.paypal.com/ncp/payment/FWU3ETPSFS2HW" class="btn btn-primary">Buy Now</a>
