--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,52 @@
         <h2 style="text-align: center; margin-bottom: 30px; font-size: 2.5rem; background: linear-gradient(to right, var(--primary), var(--tertiary)); -webkit-background-clip: text; background-clip: text; color: transparent;">
             Instagram Followers
         </h2>
+
+        <!-- Add this right after the Instagram Followers price grid section -->
+<section class="benefits">
+    <h2>Instagram Followers Results</h2>
+    <div class="testimonial-grid">
+        <div class="testimonial-card">
+            <div class="testimonial-image">
+                <img src="https://i.postimg.cc/qRvGggcG/Screenshot-2025-08-04-203941.png" alt="Instagram Followers Results">
+                <div class="testimonial-overlay"></div>
+            </div>
+            <div class="testimonial-content">
+                <div class="testimonial-quote">
+                    <i class="fas fa-quote-left"></i>
+                    <p>Real results from our Instagram followers service</p>
+                    <div class="testimonial-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="testimonial-card">
+            <div class="testimonial-image">
+                <img src="https://i.postimg.cc/4355Jpcd/Screenshot-2025-08-04-203955.png" alt="Instagram Followers Delivery">
+                <div class="testimonial-overlay"></div>
+            </div>
+            <div class="testimonial-content">
+                <div class="testimonial-quote">
+                    <i class="fas fa-quote-left"></i>
+                    <p>Fast delivery of high-quality Instagram followers</p>
+                    <div class="testimonial-rating">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
         
         <section class="price-grid">
             <div class="price-card animate">
