--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
     
     <main class="container">
         <section class="hero">
-            <h3 class="glow">Add more followers to your account! Whether you're a personal user, an influencer, a creator, or a business — anyone can grow their followers and boost their presence.
+            <h3 class="glow">Add more followers to your account! Whether you're a personal user, an influencer, a creator, or a business.
 </h3>
         </section>
         
@@ -1111,7 +1111,7 @@
                     <i class="fab fa-instagram"></i>
                     <h3>Instagram Followers</h3>
                 </div>
-                <div class="price">1k Followers / $4.49</div>
+                <div class="price">1k Followers + 100 likes Free / $4.49</div>
                 <ul class="features">
                     <li>High-quality followers (accounts with profile pictures and active followers, not bots.)</li>
                     <li>Instant delivery — followers arriving in 1 to 10 minutes.</li>
